fixed export json link

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -42,7 +42,8 @@
                             <li id="newmarker" style="display: none;" class="text-center"><a href="#" data-toggle="modal"
                                     data-target="#newmarkermodal">New
                                     Marker</a></li>
-                            <li id="getjson" style="display: none;" class="text-center"><a href="https://lh-atlas.firebaseio.com/.json?print=pretty&format=export&download=lh-atlas-export.json">Export
+                            <li id="getjson" style="display: none;" class="text-center"><a data-toggle="modal"
+                                data-target="#export-json" href="#">Export
                                     JSON</a></li>
                             <div class="dropdown-divider"></div>
                             <li id="signout" style="display: none;" class="text-center"><a href="/signout">Sign
