--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -97,6 +97,7 @@
               <br><br>
               <input type="text" placeholder="Version" name="m_version" required id="m_version"><br><br>
               <input type="text" placeholder="Name" required name="m_name" id="m_name"><br><br>
+              <input type="text" placeholder="Patients" required id="m_pnum" name="m_pnum"><br><br>
               <input type="text" placeholder="Location" required id="m_location" name="m_location"><br><br>
               <input type="email" placeholder="Email"  id="m_contactEmail" name="m_contactEmail"><br><br>
               <input type="tel" placeholder="Phone" id="m_contactPhone" name="m_contactPhone"><br><br>
