--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -32,55 +32,63 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar-togg">
-                <ul class="navbar-nav ml-auto">
-
-                    <li class="nav-item dropdown">
-                        <a style="color: white;" href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
-                            <span class="fa fa-user"></span> More </a>
-                        <ul class="dropdown-menu">
-                            <li id="login-btn" class="text-center"><a href="/admin">Login</a></li>
-                            <li id="login-btn" class="text-center"><a href="/admin/register">Register</a></li>
-                            <li id="newmarker" style="display: none;" class="text-center"><a href="#" data-toggle="modal"
-                                    data-target="#newmarkermodal">New
-                                    Marker</a></li>
-                            <li id="getjson" style="display: none;" class="text-center"><a data-toggle="modal"
-                                data-target="#export-json" href="#">Export
-                                    JSON</a></li>
-                            <div id="signout" style="display: none;" class="dropdown-divider"></div>
-                            <li id="signout" style="display: none;" class="text-center"><a href="/signout">Sign
-                                    Out</a></li>
-                            <div class="dropdown-divider"></div>
-                            <li class="text-center"><a href="#" data-toggle="modal" data-target="#helpmodal">About</a></li>
+                    <ul class="navbar-nav ml-auto">
+                            <li><a style="color: white;" href="#" class="nav-link" data-toggle="modal"
+                                    data-target="#helpmodal">About</a></li>
+                            <!-- <li class="nav-item navicon">|</li> -->
+                            <!-- <li id="login-btn" class="nav-item navicon">
+                                <a class="nav-link" href="/admin">Login</a>
+        
+                            </li> -->
+                            <!-- <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/admin/register">Register</a></li> -->
+                            <% if (!user){ %>
+                                <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/admin/register">Register</a></li>
+                            <!-- <li id="admin-btn" class="nav-item navicon"><a style="color: white;" class="nav-link" href="/admin">Admin</a></li> -->
+                            <% } %>
+        
+                            <% if (user){ %>
+                            <li id="signout" style="" class="nav-item navicon"><a style="color: white;" class="nav-link" href="/signout">Logout</a></li>
+                            <% } %>
+        
+        
                         </ul>
-                    </li>
-                </ul>
             </div>
         </div>
     </nav>
 
     <div class="modal fade" id="helpmodal" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Credits</h4>
-                </div>
-                <div class="modal-body">
-                    <div>Made by, Palash Bauri</div>
-                    <br>
-                    <div>Map Marker Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
-                        from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by
-                        <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC
-                            3.0 BY</a></div>
-                    <div>
-                        All the LibreHealth icons used here are owned by <a href="http://librehealth.io/">LibreHealth</a>
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">About</h4>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <div class="modal-body">
+                        <div>
+                            LibreHealth Atlas is an easy to use map of users of LibreHealth Products such as EHR , Toolkit
+                            and Radiology. This will be useful for new users to find fellow user and also request help and
+                            support in from them their locality.
+                        </div>
+                        <br>
+                        <small>
+                            <div>Special Thanks To ,</div>
+    
+                            <div>Map Marker Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a>
+                                from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed
+                                by
+                                <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
+                                    target="_blank">CC
+                                    3.0 BY</a></div>
+                            <div>
+                                All the LibreHealth icons used here are owned by <a href="http://librehealth.io/">LibreHealth</a>
+                            </div>
+                        </small>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     <div class="modal fade" id="newmarkermodal" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm">
           <div class="modal-content">
@@ -185,6 +193,7 @@
             </div>
         </div>
     
+        <% if (!user){ %>
       <div id="login-area" class="container pt-3">
         <div class="row justify-content-sm-center">
           <div class="col-sm-6 col-md-4">
@@ -210,10 +219,14 @@
           </div>
         </div>
       </div>
-      <div id="button-area" style="display: none;" class="container pt-3">
+      <% } else{ %>
+
+      
+      <div id="button-area" style="" class="container pt-3">
         <div class="row justify-content-sm-center">
           <div class="col-sm-6">
-            <canvas id="toolchart"  width="100" height="40"></canvas> 
+            <canvas id="toolchart"  width="100" height="40" ></canvas> 
+            <!-- <progress id="animationProgress" max="1" value="0" style="width: 100%"></progress> -->
             <br>
             <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                 <div class="btn-group mr-2" role="group" aria-label="First group">
@@ -236,6 +249,8 @@
         </div>
 
         </div>
+        <% } %>
+
         </div>
 
     
@@ -254,19 +269,20 @@
         crossorigin=""></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script src="static/admin.js"></script>
-    <% if (user){ %>
+    <!-- <% if (user){ %>
         <script>
         document.getElementById("login-area").style.display = "none";
-        document.getElementById("login-btn").style.display = "none";
+        // document.getElementById("login-btn").style.display = "none";
+        // document.getElementById("reg-btn").style.display = "none";
         document.getElementById("signout").style.display = "block";
-        document.getElementById("getjson").style.display = "block"; 
-        document.getElementById("newmarker").style.display = "block";
+        // document.getElementById("getjson").style.display = "block"; 
+        // document.getElementById("newmarker").style.display = "block";
         document.getElementById("button-area").style.display = "block";
         
         
         </script> 
 
-    <% } %>
+    <% } %> -->
 </body>
 
 </html>
