💍💣 Updated with Glitch

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -42,7 +42,7 @@
                             </li> -->
                             <!-- <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/admin/register">Register</a></li> -->
                             <% if (!user){ %>
-                                <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/admin/register">Register</a></li>
+                                <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/register">Register</a></li>
                             <!-- <li id="admin-btn" class="nav-item navicon"><a style="color: white;" class="nav-link" href="/admin">Admin</a></li> -->
                             <% } %>
         
@@ -212,7 +212,7 @@
                   <input type="text" class="form-control mb-2" placeholder="Email" name="email" required autofocus>
                   <input type="password" class="form-control mb-2" placeholder="Password" name="password" required>
                   <button class="btn btn-lg btn-primary btn-block mb-1" type="submit">Sign in</button>
-                  <p> New User? <a href="/admin/register/">Create Account Here!</a> </p>
+                  <p> New User? <a href="/register/">Create Account Here!</a> </p>
                 </form>
               </div>
             </div>
