--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
                         <a class="nav-link" style="color: white;" href="/admin">Login</a>
 
                     </li>
-                    <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/admin/register">Register</a></li>
+                    <li id="reg-btn" class="nav-item naviconr"><a style="color: white;" class="nav-link" href="/register">Register</a></li>
                     <% } %>
                     <% if (user){ %>
 
