--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
   crossorigin=""/>
-    <link type="text/css" href="static/style.css" rel="stylesheet">
+    <link type="text/css" href="/static/style.css" rel="stylesheet">
 </head>
 
 
@@ -178,8 +178,8 @@
                     </div>
                     <div class="modal-body">
                         <form class="form-group" action="/del" method="POST">
-                            <label for="mid">ID of Marker : </label>
-                            <input class="form-control" type="text" name="mid" id="mid">
+                            <label for="mid">Name of Marker : </label>
+                            <select class="form-control select" name="mid" id="mid"></select>
                             <br>
                             <input class="btn btn-danger" type="submit" value="Delete">
 
@@ -192,6 +192,28 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="makeadmin" role="dialog" aria-hidden="true">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Make an Account Admin</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form class="form-group">
+                                <label for="nonadmin">Email of User : </label>
+                                <select class="form-control select" name="nonadmin" id="nonadmin"></select>
+                                <br>
+                                <input class="btn btn-success" onclick="makeadmin()" data-dismiss="modal" value="Make Admin">
+    
+                            </form>
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
     
         <% if (!user){ %>
       <div id="login-area" class="container pt-3">
@@ -224,24 +246,29 @@
       
       <div id="button-area" style="" class="container pt-3">
         <div class="row justify-content-sm-center">
-          <div class="col-sm-6">
+          <div class="col-sm-10">
             <canvas id="toolchart"  width="100" height="40" ></canvas> 
             <!-- <progress id="animationProgress" max="1" value="0" style="width: 100%"></progress> -->
             <br>
-            <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <div class="btn-group mr-2" role="group" aria-label="First group">
+            <div style="padding-top : 5px;" class="btn-toolbar inline-block" role="toolbar" aria-label="Toolbar with button groups">
+                <div class="btn-group mr-4" role="group" aria-label="First group">
                     <button id="Create-new"  class="btn btn-primary" data-toggle="modal" data-target="#newmarkermodal">Create New Marker</button>
     
                 </div>
-                <div class="btn-group mr-2" role="group" aria-label="second group">
+                <div  style="padding-top : 5px;" class="btn-group mr-4" role="group" aria-label="second group">
                     <button id="export-json" class="btn btn-primary" data-toggle="modal" data-target="#export-json">Export JSON</button>
     
                 </div>
-                <div class="btn-group mr-2" role="group" aria-label="second group">
+                <div class="btn-group mr-4"  style="padding-top : 5px;" role="group" aria-label="second group">
                         <button id="del-m-btn" class="btn btn-primary" data-toggle="modal" data-target="#del-m">Delete Marker</button>
         
                     </div>
-                <div class="btn-group" role="group" aria-label="Third group">
+                    <% if (isadmin){ %>
+                    <div class="btn-group mr-4"  style="padding-top : 5px;" role="group" aria-label="t group">
+                            <button id="makeadmin-btn" class="btn btn-primary" data-toggle="modal" data-target="#makeadmin">Make an User SuperUser</button>
+            
+                        </div><% } %>
+                <div class="btn-group mr-4" role="group"  style="padding-top : 5px;" aria-label="Third group">
                     <button id="help-show"  class="btn btn-primary" data-toggle="modal" data-target="#help-me">Help</button>
                 </div>
               </div>
@@ -268,21 +295,94 @@
         integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
         crossorigin=""></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-    <script src="static/admin.js"></script>
-    <!-- <% if (user){ %>
+    <script src="/static/admin.js"></script>
+    <% if (user){ %>
+        
         <script>
-        document.getElementById("login-area").style.display = "none";
-        // document.getElementById("login-btn").style.display = "none";
-        // document.getElementById("reg-btn").style.display = "none";
-        document.getElementById("signout").style.display = "block";
-        // document.getElementById("getjson").style.display = "block"; 
-        // document.getElementById("newmarker").style.display = "block";
-        document.getElementById("button-area").style.display = "block";
-        
-        
+            $.ajax({
+                url:'/api/markers/admin/<%= user %>',
+                type:'GET',
+                dataType: 'json',
+                success: function( json ) {
+                    $.each(json, function(i, value) {
+                        $('#mid').append($('<option>').text(value.id + " : " + value.name).attr('value', value.id));
+                    });
+                }
+            });
+            
+            // var su = []
+            // var cuser = '<%= user %>'
+            // console.log(typeof cuser)
+
+            $.ajax({
+                url:'/api/nonadmin',
+                type:'GET',
+                dataType: 'json',
+                success: function( json ) {
+                    $.each(json, function(i, value) {
+                        $('#nonadmin').append($('<option>').text(value.id + " : " + value.EMAIL).attr('value', value.EMAIL));
+                        
+                    });
+                }
+            });
+
+            // $.ajax({
+            //     url:'/api/admins',
+            //     type:'GET',
+            //     dataType: 'json',
+            //     success: function( json ) {
+            //         $.each(json, function(i, value) {
+            //             su.push(value.EMAIL);
+                        
+            //         });
+            //     }
+            // });
+            // console.log(su);
+            // var ss=[];
+            // for(var key in su) {
+            //     var value = su[key];
+            //     console.log(value)
+                
+            //     // do something with "key" and "value" variables
+                
+            //     }
+            // console.log(ss);
+            
+            // function includes(k) {
+            //     for(var i=0; i < this.length; i++){
+            //         if( this[i] === k || ( this[i] !== this[i] && k !== k ) ){
+            //         return true;
+            //         }
+            //     }
+            //     return false;
+            //     }
+            
+            // su.includes = includes;
+            // console.log(su.indexOf("<%= user %>"))
+
+            // if (su.includes('<%= user %>')){
+            //     console.log("is admin");
+            // }else{
+            //     console.log("non")
+            // }
+                
+            // console.log(su.values)
+            function makeadmin(){
+                ue = document.getElementById("nonadmin").value;
+                $.post("/makeadmin", {
+                    ue : ue
+                },
+                function (data, status) {
+                });
+            }
+            // if (su.includes('<%= user %>') == true){
+            //     console.log("is admin");
+            // }else{
+            //     console.log("non")
+            // }
         </script> 
 
-    <% } %> -->
+    <% } %> 
 </body>
 
 </html>
