--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -135,7 +135,9 @@
     <% } %>
 
     <script>
-            console.log("Are You A Developer? If Not Don't Do Anything Silly Here Please! If Somebody Told You to type some codes here , JUST DON'T DO IT! ")
+        console.log(
+            "Are You A Developer? If Not Don't Do Anything Silly Here Please! If Somebody Told You to type some codes here , JUST DON'T DO IT! "
+        )
     </script>
 
 </body>
